Bug fixes and features
Emails are added when they arrive and removed when they are read. If the list is too long it scrolls. If the lines are too long they end with "..."

--- a/bars/main/main.css
+++ b/bars/main/main.css
@@ -46,6 +46,7 @@ body, html {
     height: 30%;
     border-top: 1px solid;
     padding: 5%;
+    overflow: hidden;
 }
 
 #emailConnectionDot {
@@ -67,6 +68,9 @@ body, html {
     position: absolute;
     bottom: 0;
     padding: 5%;
+    margin-right: -100%;
+    padding-right: 100%;
+    overflow-y: scroll;
 }
 
 #unreadEmailCount {
@@ -84,4 +88,12 @@ body, html {
     height: 100%;
     text-align: center;
     line-height: 200%;
+}
+
+.email {
+    padding: 5px 0;
+}
+.email > * {
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
